--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -40,11 +40,13 @@ RUN echo "deb https://packages.adoptium.net/artifactory/deb $(awk -F= '/^VERSION
 RUN apt update
 RUN apt -y install temurin-17-jdk=17.0.5.0.0+8
 RUN mkdir /var/www/java
+COPY DailyReportSystem-0.0.1-SNAPSHOT.jar /var/www/java/
 RUN a2enmod proxy
 RUN a2enmod proxy_ajp
 RUN echo "ProxyPass / ajp://localhost:8009/" >> /etc/apache2/apache2.conf
 
 # 7. 一般ユーザmyuserの作成およびmyuserでログイン
+RUN apt-get update
 RUN apt -y install sudo
 RUN useradd -s /bin/bash -G sudo -m myuser
 RUN echo "myuser:mypass" | chpasswd
