--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,25 +5,25 @@ services:
   # Apache2・Java用のコンテナ（webという名前は任意で設定したもの）
   web:
     build: ./web          # Dockerfileが格納されたフォルダの相対パス
-    image: "myimage:web"  # 設定したいコンテナイメージ名
+    image: "myimage:report"  # 設定したいコンテナイメージ名
     ports:                # ポートフォワーディングの設定
       - 80:80
       - 443:443
     links:                # このコンテナが依存するコンテナとそのコンテナ名の指定
-      - "db:db_container"
-    container_name: "web_container" # このコンテナの名前の指定
+      - "db:db2_container"
+    container_name: "web2_container" # このコンテナの名前の指定
   # MySQL用のコンテナ（dbという名前は任意で設定したもの）
   db:
     build: ./db
-    image: "myimage:db"
+    image: "myimage:report"
     ports:
       - 4306:3306
     expose:               # 他のコンテナと通信できるポート番号の指定
       - 3306
-    container_name: "db_container"
+    container_name: "db2_container"
     volumes:              # データの永続化の設定
-      - db_data:/var/lib/mysql       # ボリューム名:コンテナのディレクトリ
+      - db2_data:/var/lib/mysql       # ボリューム名:コンテナのディレクトリ
 
 # ボリュームの設定
 volumes:
-  db_data:
+  db2_data:
